* minimum spanning tree functions keep attributes now and also the 
  direction of the edges is kept in directed graphs
* there are separate functions to calculate different types of
  transitivity now
* igraph_delete_vertices rewritten to allocate less memory for the new
  graph 
* neighborhood related functions added: igraph_neighborhood,
  igraph_neighborhood_size, igraph_neighborhood_graphs

Changes in the R interface
--------------------------

* bonpow function ported from SNA to calculate Bonacich power centrality
* get.adjacency supports attributes now, this means that it sets the
  colnames  and rownames attributes and can return attribute values in
  the matrix instead of 0/1
* grg.game, geometric random graphs
* graph.density, graph density calculation
* edge and vertex attributes can be added easily now when added new
  edges with add.edges or new vertices with add.vertices
* graph.data.frame creates graph from data frames, this can be used to 
  create graphs with edge attributes easily
* plot.igraph and tkplot can plot self-loop edges now
* graph.edgelist to create a graph from an edge list, can also handle 
  edge lists with symbolic names
* get.edgelist has now a 'names' argument and can return symbolic
  vertex names instead of vertex ids, by default id uses the 'name'
  vertex attribute is returned 
* printing graphs on screen also prints symbolic symbolic names
  (the 'name' attribute if present)
* maximum flow and minimum cut functions: graph.maxflow, graph.mincut
* vertex and edge connectivity: edge.connectivity, vertex.connectivity
* edge and vertex disjoint paths: edge.disjoint.paths, 
  vertex.disjoint.paths
* White's cohesion and adhesion measure: graph.adhesion, graph.cohesion
* dimacs file format added
* as.directed handles attributes now
* constraint corrected, it handles weighted graphs as well now
* weighted attribute to graph.adjacency
* spinglass-based community structure detection, the Joerg Reichardt --