@@ -32,6 +32,8 @@ Changes in the C library
   graph 
 * neighborhood related functions added: igraph_neighborhood,
   igraph_neighborhood_size, igraph_neighborhood_graphs
+* two new games added based on different node types:
+  igraph_preference_game and igraph_asymmetric_preference_game
 
 Changes in the R interface
 --------------------------
@@ -72,6 +74,8 @@ Changes in the R interface
 * transitivity can calculate local transitivity as well
 * neighborhood related functions added: neighborhood,
   neighborhood.size, graph.neighborhood
+* new graph generators based on vertex types: preference.game and
+  asymmetric.preference.game
 
 
 Bugs corrected
